--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -1,23 +1,23 @@
 version: '2'
 services:
-  c1:
+  node1:
     image: medvekoma/cassandra
     ports:
       - "9042:9042"
       - "9160:9160"
     restart: unless-stopped
-  c2:
+  node2:
     image: medvekoma/cassandra
     links:
-      - c1:seed1
+      - node1:seed1
     environment:
       CASSANDRA_SEEDS: seed1
     restart: unless-stopped
-  c3:
+  node3:
     image: medvekoma/cassandra
     links:
-      - c1:seed1
-      - c2:seed2
+      - node1:seed1
+      - node2:seed2
     environment:
       CASSANDRA_SEEDS: seed1,seed2
     restart: unless-stopped
