--- a/nobel-app/package.json
+++ b/nobel-app/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "body-parser": "~1.13.2",
+    "cassandra-driver": "^3.0.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
