--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -1,20 +1,20 @@
 version: '2'
 services:
   node1:
-    image: medvekoma/cassandra
+    image: medvekoma/cassandra-demo
     ports:
       - "9042:9042"
       - "9160:9160"
     restart: unless-stopped
   node2:
-    image: medvekoma/cassandra
+    image: medvekoma/cassandra-demo
     links:
       - node1:seed1
     environment:
       CASSANDRA_SEEDS: seed1
     restart: unless-stopped
   node3:
-    image: medvekoma/cassandra
+    image: medvekoma/cassandra-demo
     links:
       - node1:seed1
       - node2:seed2
