--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -1,3 +1,4 @@
 FROM cassandra
 
 COPY bin/* /demo/
+ADD https://bintray.com/artifact/download/tolbertam/sstable-tools/sstable-tools-3.0.0-alpha4.jar sstable-tools.jar
