download tools to demo folder

--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -1,4 +1,4 @@
 FROM cassandra
 
 COPY bin/* /demo/
-ADD https://bintray.com/artifact/download/tolbertam/sstable-tools/sstable-tools-3.0.0-alpha4.jar sstable-tools.jar
+ADD https://bintray.com/artifact/download/tolbertam/sstable-tools/sstable-tools-3.0.0-alpha4.jar /demo/sstable-tools.jar
