--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -1,6 +1,5 @@
 FROM cassandra
 
 COPY bin/* /demo/
-# ADD https://bintray.com/artifact/download/tolbertam/sstable-tools/sstable-tools-3.0.0-alpha4.jar /demo/sstable-tools.jar
-# RUN apt-get install -y cassandra-tools
+RUN apt-get update && apt-get install -y jq
 
