--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -1,23 +1,23 @@
 version: '2'
 services:
+
   node1:
     image: medvekoma/cassandra-demo
     ports:
       - "9042:9042"
       - "9160:9160"
+    environment:
+      CASSANDRA_SEEDS: node1,node2,node3
     restart: unless-stopped
+
   node2:
     image: medvekoma/cassandra-demo
-    links:
-      - node1:seed1
     environment:
-      CASSANDRA_SEEDS: seed1
+      CASSANDRA_SEEDS: node1,node2,node3
     restart: unless-stopped
+
   node3:
     image: medvekoma/cassandra-demo
-    links:
-      - node1:seed1
-      - node2:seed2
     environment:
-      CASSANDRA_SEEDS: seed1,seed2
+      CASSANDRA_SEEDS: node1,node2,node3
     restart: unless-stopped
