--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -7,17 +7,20 @@ services:
       - "9042:9042"
       - "9160:9160"
     environment:
+      CASSANDRA_CLUSTER_NAME: demo
       CASSANDRA_SEEDS: node1,node2,node3
     restart: unless-stopped
 
   node2:
     image: medvekoma/cassandra-demo
     environment:
+      CASSANDRA_CLUSTER_NAME: demo
       CASSANDRA_SEEDS: node1,node2,node3
     restart: unless-stopped
 
   node3:
     image: medvekoma/cassandra-demo
     environment:
+      CASSANDRA_CLUSTER_NAME: demo
       CASSANDRA_SEEDS: node1,node2,node3
     restart: unless-stopped
